# argus

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  go.mod
.github/workflows/: build.yml  ci-linux.yml  ci-macos.yaml  macos-build.yaml
discovery/: discovery.kicad_pro  discovery.kicad_sch  lib.kicad_sym
discovery/firmware/: BUILD  main.c
discovery/footprints.pretty/: L_pol_2016.kicad_mod  RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  SOT-223_DIO.kicad_mod
discovery/pcb/: SOT-223_DIO.step  discovery.kicad_pcb  discovery.kicad_pro  discovery.kicad_sch  lib.kicad_sym  sym-lib-table
discovery/pcb/footprints.pretty/: ABM8-272-T3_ABR.kicad_mod  CONN_BM03B-SRSS-TBLFSN_JST.kicad_mod  C_0402_1005Metric_small_pads.kicad_mod  L_pol_2016.kicad_mod
discovery/pcb/production/: netlist.ipc
howdy_client/: BUILD  main.go
howdy_server/: BUILD  main.go
proto/howdy/: BUILD  howdy.proto
proto/logging/: BUILD  logging.proto
scripts/: license.sh  mod_tidy.sh  sync_proto.sh
util/: BUILD  log.go  log_server.go
util/cmd/log_client/: BUILD  main.go
util/cmd/log_server/: BUILD  main.go
