# golang
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# cc
bazel_dep(name = "rules_cc", version = "0.2.17")

# rpi pico
bazel_dep(name = "picotool", version = "develop")
git_override(
    module_name = "picotool",
    commit = "d1a8d35da3f622cf228c0a17e9b7a4295d5282d0",
    remote = "https://github.com/raspberrypi/picotool.git",
)

bazel_dep(name = "pico-sdk", version = "develop")

# I pull in my own branch of a patched version of bazel stuff
git_override(
    module_name = "pico-sdk",
    commit = "a51b3c7ba2594b00007660fe0a63ce4136dd3251",
    remote = "https://github.com/corvad/pico-sdk.git",
)

register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2350",
)

bazel_dep(name = "rules_platform", version = "0.1.0")
